Fixes #11 alignment of headings and content in all browser sizes.

--- a/_sass/_lacuna.scss
+++ b/_sass/_lacuna.scss
@@ -106,7 +106,7 @@ hr.brackets:after {
     
     & > li:first-child a {
       // not phones
-      @media (min-width: $screen-sm-max) {
+      @media (min-width: $screen-xs-max) {
         padding-left: 0;
       }
     }
